1. Add "Top" icon at the bottom of page for phone view. 2. Modify the position of the "Left" icon for phone view. 3. For phone view, change the listview style in the Glove's index and detail page. Remove gaps, radius corner, and make it fully wide. 4. Change image slides in the Home/Index.cshtml. Now it is carousel for non-phone view and slide for phone view. 5. Fix issues for IE7 compatibility 6. Add "empty message" in Glove/Index.cshtml to tell user no glove.

--- a/trunk/ sytrading --username shang0001@gmail.com/SYTradingPublicSite/swipepanel/jquery.pageslide.css
+++ b/trunk/ sytrading --username shang0001@gmail.com/SYTradingPublicSite/swipepanel/jquery.pageslide.css
@@ -34,7 +34,7 @@
         width: 50px;
         position: fixed;
         right: 0px;
-        margin-top: 60px;
+        margin-top: 75%;
         height: 32px;
         background-color: rgb(112, 175, 224);
         padding: 5px;
